# fractal

./: CMakeLists.txt
fractal/: CMakeLists.txt
fractal/include/: application.h  buffer.h  camera.h  config.h  config.h.in  entry_point.h  error.h  event.h  file.h  file_dialogs.h  fractal.h  frame_buffer.h  geometry.h  glfw_window.h  imgui_layer.h  keyboard_event.h  layer.h  log.h  mesh.h  mouse_event.h  orthocamera.h  orthocamera_controller.h  perspectivecamera.h  perspectivecamera_controller.h  platform.h  renderer.h  renderer_commands.h  shader.h  texture.h  utility.h  vertex_array.h  window.h  window_event.h
fractal/libs/glad/: CMakeLists.txt
fractal/libs/glad/include/glad/: glad.h
fractal/libs/glad/src/: glad.c
fractal/libs/imgui/: CMakeLists.txt
fractal/libs/imgui/examples/: imgui_impl_opengl3.h
fractal/src/: application.cpp  buffer.cpp  camera.cpp  error.cpp  file.cpp  file_dialogs.cpp  fractal.cpp  frame_buffer.cpp  geometry.cpp  glfw_window.cpp  imgui_layer.cpp  keyboard_event.cpp  layer.cpp  log.cpp  mesh.cpp  mouse_event.cpp  orthocamera.cpp  orthocamera_controller.cpp  perspectivecamera.cpp  perspectivecamera_controller.cpp  renderer.cpp  renderer_commands.cpp  shader.cpp  texture.cpp  utility.cpp  vertex_array.cpp  window.cpp
release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  imgui.ini
release/fractal/: cmake_install.cmake
release/fractal/libs/glad/: cmake_install.cmake
release/fractal/libs/glfw-3.3.8/: cmake_install.cmake  cmake_uninstall.cmake
release/fractal/libs/glfw-3.3.8/src/: cmake_install.cmake  glfw3.pc
release/fractal/libs/glm/: cmake_install.cmake
release/fractal/libs/glm/glm/: cmake_install.cmake
release/fractal/libs/imgui/: cmake_install.cmake
shaders/: shapes_shader.glsl
src/: main.cpp
