include_directories(${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB SOURCES "*.cpp")
add_library(IMGUI ${SOURCES})

target_include_directories(IMGUI
          INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

install(TARGETS IMGUI DESTINATION lib)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})